<resources>
    <string name="app_name">PhysicsApp</string>
    <string-array name="equations">
        <item>v̅ = Δs / Δt</item>
        <item>v = ds / dt</item>
        <item>a̅ = Δv / Δt</item>
        <item>a = dv / dt</item>
        <item>v = v0 + at</item>
        <item>x = x0 + v0 * t + ½ * a * t^2</item>
        <item>v^2 = v0^2 + 2 * a * (x - x0)</item>
        <item>v̅ = ½ * (v + v0)</item>
        <item>F = m * a</item>
        <item>F = dp / dt</item>
        <item>W = m * g</item>
        <item>f ≤ μ * N</item>
        <item>ac = v^2 / r</item>
        <item>ac = -w^2 * r</item>
        <item>p = m * v</item>
        <item>J = F̅ * Δt</item>
        <item>J = ∫ F * dt</item>
        <item>F̅ * Δt = m * Δv</item>
        <item>∫	F * dt = Δp</item>
        <item>W = F̅ * Δs * cos θ</item>
        <item>W = ∫ F · ds</item>
        <item>F̅ * Δs * cos θ = ΔE</item>
        <item>∫ F · ds = ΔE</item>
        <item>K = ½ * m * v^2</item>
        <item>ΔU = − ∫ F · ds</item>
        <item>F = - ∇U</item>
        <item>ΔUg = m * g * Δh</item>
        <item>η = Wout / Ein</item>
        <item>P̅ = ΔW / Δt</item>
        <item>P = dW / dt</item>
        <item>P̅ = F̅ * v * cos θ</item>
        <item>P = F · v</item>
        <item>ω̅ = Δθ / Δt</item>
        <item>ω = dθ / dt</item>
        <item>v = ω × r</item>
        <item>α̅ = Δω / Δt</item>
        <item>α = dω / dt</item>
        <item>a = α × r − ω^2 * r</item>
        <item>ω = ω0 + α * t</item>
        <item>θ = θ0 + ω0 * t + ½ * α * t^2</item>
        <item>ω^2 = ω0^2 + 2 * α * (θ − θ0)</item>
        <item>ω̅ = ½ * (ω + ω0)</item>
        <item>τ = I * α</item>
        <item>τ = dL * dt</item>
        <item>τ = r * F * sinθ</item>
        <item>τ = r × F</item>
        <item>I = ∑ m * r^2</item>
        <item>I = ∫ r2 * dm</item>
        <item>W = τ̅ * Δθ</item>
        <item>W = ∫ τ · dθ</item>
        <item>P = τ * ω * cos θ</item>
        <item>P = τ · ω</item>
        <item>K = ½ * I * ω^2</item>
        <item>L = m * r * v * sin θ</item>
        <item>L = r × p</item>
        <item>L = I * ω</item>
        <item>Fg = − (G * m1 * m2 * r̂) / r2</item>
        <item>g = − (G * m * r̂) r^2</item>
        <item>Ug = − (G * m1 * m2) / r</item>
        <item>Vg = − (G * m) / r</item>
        <item>v = √ G * m / r</item>
        <item>v = √ 2G * m / r</item>
        <item>F = − k * Δx</item>
        <item>Us = ½ * k * Δx^2</item>
        <item>T = 2 * π * √ m / k</item>
        <item>T = 2 * π * √ ℓ / g</item>
        <item>ƒ = 1 / T</item>
        <item>ω = 2 * π * ƒ</item>
        <item>ρ = m / V</item>
        <item>P = F / A</item>
        <item>P = P0 + ρ * g * h</item>
        <item>B = ρ * g * Vdisplaced</item>
        <item>qm = m / t</item>
        <item>qV = V / t</item>
        <item>ρ1 * A1 * v1 = ρ2 * A2 * v2</item>
        <item>A1 * v1 = A2 * v2</item>
        <item>P1 + ρ * g * y1 + ½ * ρ * v1^2 =	 P2 + ρ * g * y2 + ½ * ρ * v2^2</item>
        <item>F̅ / A = η * (Δvx / Δz)</item>
        <item>F / A = η * dvx / dz</item>
        <item>v = η / ρ</item>
        <item>R = ½ * ρ * C * A * v^2</item>
        <item>Ma = v / c</item>
        <item>Re = ρ * v * D / η</item>
        <item>Fr = v / √gℓ</item>
        <item>F / A = E * Δℓ / ℓ0</item>
        <item>F / A = G * Δx / y</item>
        <item>F / A = K * ΔV / V0</item>
        <item>Δℓ = α * ℓ0 * ΔT</item>
        <item>ΔA = 2α * A0 * ΔT</item>
        <item>ΔV = 3α * V0 * ΔT</item>
        <item>ΔV = β * V0 * ΔT</item>
        <item>Q = m * c * ΔT</item>
        <item>Q = m * L</item>
        <item>P * V = n * R * T</item>
        <item>n * R = N * k</item>
        <item>⟨K⟩ = 3/2 * k * T</item>
        <item>vp = √ 2 * k * T / m</item>
        <item>⟨v⟩ = √ 8 * k * T / (π * m)</item>
        <item>vrms =  √	3 * k * T / m</item>
        <item>Φ̅ = ΔQ / Δt</item>
        <item>Φ = dQ / dt</item>
        <item>Φ = k * A * ΔT / ℓ</item>
        <item>Φ = ε * σ * A * (T^4 − T0^4)</item>
        <item>λmax = b / T</item>
        <item>ΔU = 3⁄2 * n * R * ΔT</item>
        <item>W = - ∫ P * dV</item>
        <item>ΔU = Q + W</item>
        <item>ΔS = ΔQ / T</item>
        <item>S = k * log w</item>
        <item>ℰreal = 1 − QC / QH</item>
        <item>ℰideal = 1 − TC / TH</item>
        <item>COPreal = QC / (QH − QC)</item>
        <item>COPideal = TC / (TH − TC)</item>
        <item>v = f * λ</item>
        <item>v = ƒλ</item>
        <item>f = 1 / T</item>
        <item>fbeat = fhigh − flow</item>
        <item>I = ⟨P⟩ / A</item>
        <item>LI = 10 * log (I / I0)</item>
        <item>LP = 20 * log (∆P	/ ∆P0)</item>
        <item>nλ = d sin θ</item>
        <item>nλ / d ≈ x / L</item>
        <item>n = c / v</item>
        <item>n1 * sin θ1 = n2 * sin θ2</item>
        <item>sin θc = n2 / n1</item>
        <item>1 / f = 1 / do + 1 / di</item>
        <item>M = hi / ho = di / do</item>
        <item>f ≈ r / 2</item>
        <item>F = k * q1 * q2 / r^2</item>
        <item>F = 1 / (4 * π * ε0) * (q1 * q2 / r^2) * r̂</item>
        <item>E = FE / q</item>
        <item>ΔV = ΔUE / q</item>
        <item>E̅ = − ∆V / d</item>
        <item>E = − ∇V</item>
        <item>E = k * ∑ (q / r^2) * r̂</item>
        <item>E = k * ∫ (dq / r^2) * r̂</item>
        <item>V = k * ∑ (q */r)</item>
        <item>V = k * ∫ (dq / r)</item>
        <item>C = Q / V</item>
        <item>C = κ * ε * 0A / d</item>
        <item>C = 2 * π * κ * ε * 0ℓ / ln (b / a)</item>
        <item>C = 4 * π * κ * ε0 / (1 / a - 1 / b)</item>
        <item>U = 1 / 2 * C * v^2 = 1 / 2 * Q^2 / C = 1 / 2 * Q * V</item>
        <item>I̅ = Δq / Δt</item>
        <item>I = dq / dt</item>
        <item>V = I * R</item>
        <item>E = ρ * J</item>
        <item>J = σ / E</item>
        <item>ρ = 1 / σ</item>
        <item>R = ρ * ℓ / A</item>
        <item>P = V * I = I^2 * R = V^2 / R</item>
        <item>Rs = ∑ Ri</item>
        <item>1 / Rp = ∑ (1 / Ri)</item>
        <item>1 / Cs = ∑ (1 / Ci)</item>
        <item>Cp = ∑ Ci</item>
        <item>FB = q * v * B * sin θ</item>
        <item>FB = q * v × B</item>
        <item>FB = I * ℓ * B * sin θ</item>
        <item>d * FB = I * d * ℓ × B</item>
        <item>B = μ0 * I / (4 * π) * ∫ (ds × r̂ / r^2)</item>
        <item>B = µ0 * n * I</item>
        <item>B = μ0 * I / (2 * π * r)</item>
        <item>FB / ℓ = μ0 / (2 * pi) * I1 * I2 / r</item>
        <item>ΦE = E * A * cos θ</item>
        <item>ΦE = int (E · dA)</item>
        <item>ΦB = B * A * cos θ</item>
        <item>ΦB = int (B · dA)</item>
        <item>ℰ = B * ℓ * v</item>
        <item>ℰ̅ = − ΔΦB / Δt</item>
        <item>ℰ̅ = − dΦB / dt</item>
        <item>∯E · dA = Q * ε0</item>
        <item>∇ · E = ρ / ε0</item>
        <item>∯B · dA = 0</item>
        <item>∇ · B = 0</item>
        <item>∮E · ds = − dΦB / dt</item>
        <item>∇ × E = − ∂ * B / ∂ / t</item>
        <item>∮B · ds = μ0 * ε0 * dΦE / dt + μ0I</item>
        <item>∇ × B = μ0 * ε0 * ∂ * E / ∂ / t + μ0 * J</item>
        <item>t\' = t / √ (1 − v^2 / c^2)</item>
        <item>ℓ\' = ℓ * √ (1 − v^2 / c^2)</item>
        <item>m\' = m √ (1 − v^2 / c^2)</item>
        <item>u\' = u + v / (1 + u * v / c^2)</item>
        <item>E = m * c^2 / √ (1 − v^2 / c^2)</item>
        <item>p = m * v / √(1 − v^2 / c^2)</item>
        <item>E^2 = p^2 * c^2 + m0^2 * c^4</item>
        <item>E = m * c^2</item>
        <item>λ / λ0 = f0 / f = sqrt((1 + v / c) / (1 - v / c))</item>
        <item>E = h * f</item>
        <item>Kmax = E - ϕ = h * (ƒ − ƒ0)</item>
        <item>p = h / λ</item>
        <item>i * h * ∂ / (∂ * t) * Ψ(r,t) = - h^2 / (2 * m) * ∇^2 * Ψ(r,t) + V(r) * Ψ(r,t)</item>
        <item>E * ψ(r) = − h^2  / 2 * m * ∇^2 * ψ(r) + V(r) * ψ(r)</item>
        <item>Δpx * Δx ≥ ℏ / 2</item>
        <item>ΔE * Δt ≥ ℏ / 2</item>
        <item>1 / λ = - R∞ * ((1 / n^2) - (1 / n0^2))</item>
        <item>N = N0 * 2^(−t / τ)</item>
    </string-array>
    <string-array name="variables">
        <item>v̅</item>
        <item>Δs</item>
        <item>Δt</item>
        <item>v</item>
        <item>ds</item>
        <item>dt</item>
        <item>a̅</item>
        <item>Δv</item>
        <item>a</item>
        <item>dv</item>
        <item>v0</item>
        <item>t</item>
        <item>x</item>
        <item>x0</item>
        <item>F</item>
        <item>m</item>
        <item>dp</item>
        <item>W</item>
        <item>g</item>
        <item>f</item>
        <item>μ</item>
        <item>N</item>
        <item>ac</item>
        <item>ω</item>
        <item>p</item>
        <item>J</item>
        <item>F̅</item>
        <item>Δp</item>
        <item>W</item>
        <item>Δs</item>
        <item>s</item>
        <item>ds</item>
        <item>θ</item>
        <item>ΔE</item>
        <item>K</item>
        <item>U</item>
        <item>ΔU</item>
        <item>ΔUg</item>
        <item>Δh</item>
        <item>η</item>
        <item>Wout</item>
        <item>Ein</item>
        <item>P̅</item>
        <item>ΔW</item>
        <item>dW</item>
        <item>ω̅</item>
        <item>Δθ</item>
        <item>dθ</item>
        <item>r</item>
        <item>α</item>
        <item>α̅</item>
        <item>Δω</item>
        <item>dω</item>
        <item>ω0</item>
        <item>τ</item>
        <item>I</item>
        <item>L</item>
        <item>dL</item>
        <item>Fg</item>
        <item>r̂</item>
        <item>Us</item>
        <item>ƒ</item>
        <item>ρ</item>
        <item>V</item>
        <item>Vdisplaced</item>
        <item>qm</item>
        <item>qV</item>
        <item>η</item>
        <item>ℓ</item>
        <item>ε</item>
        <item>γ</item>
    </string-array>
    <string-array name="constants">
        <item>i</item>
        <item>π</item>
        <item>e</item>
        <item>\gamma </item>
        <item>Φ</item>
        <item>M_1</item>
        <item>\beta </item>
        <item>l_P</item>
        <item>m_P</item>
        <item>t_P</item>
        <item>q_P</item>
        <item>T_P</item>
        <item>c</item>
        <item>G</item>
        <item>h</item>
        <item>μ_0</item>
        <item>ε_0</item>
        <item>Z_0</item>
        <item>k_e</item>
        <item>e</item>
        <item>μ_B</item>
        <item>G_0</item>
        <item>G_0^(-1)</item>
        <item>K_J</item>
        <item>Φ_0</item>
        <item>μ_N</item>
        <item>R_K</item>
        <item>a_0</item>
        <item>r_e</item>
        <item>m_e</item>
        <item>G_F</item>
        <item>E_h</item>
        <item>m_p</item>
        <item>h/2m_e</item>
        <item>m_u</item>
        <item>N_A</item>
        <item>k_B</item>
        <item>F</item>
        <item>c_1</item>
        <item>c_(1L)</item>
        <item>n_0</item>
        <item>R</item>
        <item>N_Ah</item>
        <item>V_m</item>
        <item>σ</item>
        <item>b_(energy)</item>
        <item>b_(entropy)</item>
        <item>K_(J-90)</item>
        <item>R_(K-90)</item>
        <item>M_u</item>
        <item>g_n</item>
        <item>atm</item>
    </string-array>
    <string name="other">Other</string>
    <string name="search">Search</string>
    <string name="tempEquation">tempEquation</string>
    <string name="equation">Equation</string>
    <string name="UnitConverter">Unit Converter</string>
    <string name="ConvertFrom">Unit Convert From</string>
    <string name="ConvertTo">Unit Convert To</string>
    <string name="EnterExpression">Enter Expression</string>
    <string name="Convert">Convert</string>
    <string name="result">Result</string>
    <string name="calculator">Calculator</string>
    <string name="solve">Solve</string>
    <string name="convert_units">Convert Units</string>
    <string name="units">Units</string>
    <string name="insert_problem">Insert Problem</string>
    <string name="addToFavorite">Add To Favorite</string>
    <string name="favoriteE">Favorite Equations</string>
    <string name="similar_equations">Similar Equations</string>
</resources>